--- a/less/components/animations.less
+++ b/less/components/animations.less
@@ -15,10 +15,12 @@
     position: relative;
     z-index: 1;
 
-    &:hover, &:focus, &:active {
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
-        z-index: 3;
+    @media @tablet {
+        &:hover, &:focus, &:active {
+            -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+            z-index: 3;
+        }
     }
 }
   
